@@ -26,8 +26,9 @@ moblin-image-creator (0.49) gaston; urgency=low
   * Added version file. It's used --version option on CUI and 'Help' -> 'About' on GUI.
   * Added new platform netbook-lpia-moblin2-alpha2.
   * Fixed rpm spec file format.
+  * Added new platform netbook-lpia-moblin2-alpha3.
 
- -- Mitsutaka Amano <mamano@miraclelinux.com>  Wed, 18 Mar 2009 10:44:30 +0900
+ -- Mitsutaka Amano <mamano@miraclelinux.com>  Thu, 30 Apr 2009 09:24:40 +0900
 
 moblin-image-creator (0.48) gaston; urgency=low
 
